feat: Implement get supervisor route
